# todolist-grpc

./: .gitattributes  .gitignore  Caddyfile  ConnectionS.cs  Program.cs  README.md  ToDoGrpc.csproj  ToDoGrpc.sln  TodoGrpc.sln  TodoListGrpc.sln  got
Data/: AppDbContext.cs
Migrations/: 20250602094848_ToDoDataBase.Designer.cs  20250602094848_ToDoDataBase.cs  20250603121246_OneToM.Designer.cs  20250603121246_OneToM.cs  AppDbContextModelSnapshot.cs
Protos/: todo.proto
Services/: ToDoService.cs
ToDoCliClient/: Program.cs  ToDoCliClient.csproj
ToDoCliClient/methods/: ConsolePrinter.cs  ToDoServiceClient.cs
ToDoGrpc/: Program.cs  ToDoGrpc.csproj
ToDoGrpc/Data/: AppDbContext.cs
TodoCliClient/: Program.cs  TodoCliClient.csproj  TodoServiceClient.cs
TodoServer/: Program.cs  TodoServer.csproj
cert/: .gitignore  README.md  create.sh  create_localhost_cert.sh  localhost.conf  localhost.crt  localhost.csr  localhost.key  localhost.pfx  root_ca.conf  root_ca.crt  root_ca.key  root_ca.srl
protos/: greet.proto  todo.proto
todo-react-client/: generate_grpc_stubs.sh  package-lock.json  package.json
todo-vue-client/: generate_grpc_stubs.sh  grpc-stubs  package.json  vite.config.js
todo_flask_client/: Pipfile  app.py  generate_grpc_stubs.sh
todo_qt_client/: .gitignore  CMakeLists.txt  CMakePresets.json  conan_install.sh  conanfile.txt  find_conan_package.py  generate_grpc_stubs.sh  main.cpp  publish.sh
todo_qt_client/include/todo_qt_client/: greeter_client.hpp  my_header.hpp
todo_qt_client/src/: greeter_client.cpp  main.cpp  my_header.cpp
(+31 files in other folders)
